--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,7 +2,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(190, 235, 255);
+    background: rgb(159, 181, 189);
     height: 100px;
 }
 
@@ -11,13 +11,15 @@ nav a {
     margin: 0 20px;
     cursor: pointer;
     font-size: 18px;
+    color: #193b6d;
+    font-weight:600;
 } 
 
 .cart{
     width: 50px;
     height: 50px;
     border-radius: 20px;
-    background: #0d6efd;
+    background: #193b6d;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,7 +32,7 @@ nav a {
     height: 25px;
     border-radius: 50%;
     background: rgb(255, 255, 255);
-    color: rgb(45, 45, 45);
+    color: #193b6d;
     position: absolute;
     display: flex;
     justify-content: center;
